Fix release note flex alignment

--- a/media/css/cms/pages/flare26-release-notes.css
+++ b/media/css/cms/pages/flare26-release-notes.css
@@ -351,6 +351,7 @@ video[autoplay] {
     }
 
     @media (--viewport-md-up) {
+        align-items: start;
         display: flex;
 
         .release-note-progressive-rollout-indicator {
